--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -63,6 +63,7 @@
     "TokenCreator.section.extras": "Extras",
 
     "TokenCreator.section.extras.ears": "Ohren",
+    "TokenCreator.section.extras.forehead": "Stirn",
 
     "ViewPage.viewSupportingCharacter": "Nebencharakter anzeigen",
     "ViewPage.viewNpc": "NSC anzeigen",
@@ -127,6 +128,12 @@
 
     "MilestonePage.instruction": "Wählen Sie die gewünschte Änderung, die Sie mit diesem Meilenstein vornehmen möchten",
 
+    "MissionPodSelectionPage.text": "Bestimmte Schiffsklassen sind mit einem einzelnen Missionsmodul ausgestattet, das aus der Liste unten ausgewählt wird. Die durch das Modul zur Verfügung gestellten Talente können nicht auf die übliche Art und Weise ausgetauscht werden. Allerdings ist es möglich, das gesamte Missionsmodul (und damit alle seine Boni) auszutauschen.",
+    "MissionPodSelectionPage.errorNoSelection": "Bitte wählen Sie ein Missionmodul um fortzufahren.",
+
+    "MissionProfileSelectionPage.text": "Das Missionsprofil ist der entscheidende Punkt, in dem sich ein Schiff einer Klasse von seinen Schwesterschiffen unterscheidet. Das Profil bestimmt, wie das Raumschiff ausgestattet ist, welche Einrichtungen und welches Personal ihm zugewiesen werden und welche Art von Operationen von dem Schiff erwartet werden. Alle Schiffe haben ein Missionsprofil.",
+    "MissionProfileSelectionPage.errorNoSelection": "Bitte wählen Sie ein Missionsprofil um fortzufahren.",
+
     "ModificationCompletePage.instruction": "Der Charakter wurde geändert. Sie können sich nun den geänderten Charakter ansehen oder eine weitere Änderung vornehmen.\n\nEs ist ratsam, die URL des überarbeiteten Charakters zu speichern.",
 
     "ModificationTypeSelectionPage.instruction": "Wählen Sie die gewünschte Änderung an Ihrem Charakter aus",
@@ -136,13 +143,31 @@
 
     "ReputationChangePage.instruction": "Passen Sie das Ansehen des Charakters an, wenn nötig",
 
+    "SpaceframeOptionPage.text": "Möchten Sie eine Standard-Schiffsklasse oder eine eigene Schiffsklasse?",
+
     "SpaceframeOptionPage.button.standardSpaceframe": "Standard-Schiffsklasse",
     "SpaceframeOptionPage.button.customSpaceframe": "Eigene Schiffsklasse",
+
+    "SpaceframeSelectionPage.text": "Die Klasse bestimmt die grundlegende Struktur und Infrastruktur des Schiffs, sowie das Fundament, auf dem alles andere aufbaut. Während dieses Schritts wählen die Spieler eine einzelne Klasse, die die grundlegenden Systeme des Schiffs, seine Schiffsgröße und seine Bewaffnung bereitstellt. Verschiedene Klassen werden zu unterschiedlichen Zeit in und außer Dienst gestellt, das Kampagnenjahr bestimmt also die Verfügbarkeit.",
+    "SpaceframeSelectionPage.note": "Hinweis: Das Utopia Planitia Quellenbuch hat die Werte von einigen bereits vorher veröffentlichten Schiffsklassen neu festgelegt. Diese neuen Werte werden hier angezeigt.",
+    "SpaceframeSelectionPage.ignoreEndOfService": "Das Datum der Außerdienststellung ignorieren (Entscheidung liegt bei der Spielleitung)",
 
     "SpeciesDetails.options": "Spezies-Optionen",
     "SpeciesDetails.selectThree": "(Drei auswählen)",
     "SpeciesDetails.allowCrossSpecies": "Spezies-übergreifende Talente erlauben (Entscheidung liegt bei der Spielleitung)",
     "SpeciesDetails.allowEsoteric": "Esoterische Talente erlauben (Entscheidung liegt bei der Spielleitung)",
+
+    "SpeciesPage.selectSpecies": "Spezies wählen",
+    "SpeciesPage.selectMixedSpecies": "Spezies gemischter Herkunft wählen",
+    "SpeciesPage.selectCustomSpecies": "Eigene Spezies wählen",
+    "SpeciesPage.rollCoreSpecies": "Grundregelwerkspezies würfeln",
+    "SpeciesPage.rollAlphaSpecies": "Alphaquadrantspezies würfeln",
+    "SpeciesPage.rollBetaSpecies": "Betaquadrantspezies würfeln",
+    "SpeciesPage.rollGammaSpecies": "Gammaquadrantspezies würfeln",
+    "SpeciesPage.rollDeltaSpecies": "Deltaquadrantspezies würfeln",
+    "SpeciesPage.text": "Zu welcher Spezies gehören Sie? Sie können auch einen Charakter von gemischter Herkunft erstellen und Boni von beiden erhalten.\n\nBitte wählen oder würfeln Sie Ihre Spezies.",
+    "SpeciesPage.textNoRoll": "Zu welcher Spezies gehören Sie? Sie können auch einen Charakter von gemischter Herkunft erstellen und Boni von beiden erhalten.",
+    "SpeciesPage.mixedSpeciesNote": "Wählen Sie zwei Spezies. Sie erhalten Merkmale von beiden Spezies und können auf die Talente beider Spezies zugreifen, erhalten jedoch nur die Attributsboni der primären Spezies.",
 
     "StarshipToolSelection.instruction": "Wählen Sie eine Option",
     "StarshipToolSelection.standardBuild": "Standardprozess",
@@ -245,6 +270,7 @@
     "Construct.other.spaceFrame": "Schiffsklasse",
     "Construct.other.specialRules": "Spezialregeln",
     "Construct.other.species": "Spezies",
+    "Construct.other.stats": "Werte",
     "Construct.other.stress": "Anstrengung",
     "Construct.other.systems": "Systeme",
     "Construct.other.talent": "Talent",
@@ -306,7 +332,7 @@
     "Page.title.gamemasterTrackerPage": "NSC-Verwaltung",
     "Page.title.customSpaceframe": "Eigene Klasse erstellen",
     "Page.title.finalStarshipDetails": "Finale Raumschiff-Details",
-    "Page.title.missionPodSelection": "Auswahl Missionspod",
+    "Page.title.missionPodSelection": "Auswahl Missionsmodul",
     "Page.title.missionProfileSelection": "Auswahl Missionsprofil",
     "Page.title.missionProfileTalentSelection": "Auswahl Missionsprofil-Talent",
     "Page.title.simpleStarship": "Vereinfachte Raumschifferschaffung",
@@ -404,13 +430,31 @@
     "AlliedMilitaryType.name.dominion": "Dominion",
     "AlliedMilitaryType.name.other": "Andere",
 
+    "BodyType.averageMale": "Durchschnittlicher Mann",
+    "BodyType.averageFemale": "Durchschnittliche Frau",
+
     "Division.command": "Kommando",
     "Division.science": "Wissenschaft",
     "Division.operations": "Operative",
 
+    "Division.monsterMaroon.command": "Kommando",
+    "Division.monsterMaroon.science": "Wissenschaft",
+    "Division.monsterMaroon.helmEngineering": "Steuer/Technik",
+    "Division.monsterMaroon.medical": "Medizin",
+    "Division.monsterMaroon.security": "Sicherheit",
+    "Division.monsterMaroon.trainee": "Rekrut",
+
     "Era.name.enterprise": "Enterprise (22. Jahrhundert)",
     "Era.name.originalSeries": "Originalserie (23. Jahrhundert)",
     "Era.name.nextGeneration": "Das Nächste Jahrhundert (24. Jahrhundert)",
+
+    "ExtraType.none": "Nichts",
+    "ExtraType.bajoranEarring": "Bajoranischer Ohrring",
+    "ExtraType.simpleEarring": "Einfacher Ohrstecker",
+    "ExtraType.hoopEarring": "Kreolen-Ohrring",
+    "ExtraType.smallBindi": "Kleines Bindi",
+    "ExtraType.risanSymbol": "Risanisches Symbol",
+    "ExtraType.inuitTattoo": "Inuit-Tattoo",
 
     "GovernmentType.name.andorian": "Andorianer",
     "GovernmentType.name.bajoran": "Bajoraner",
@@ -423,6 +467,17 @@
     "GovernmentType.name.vulcan": "Vulkanier",
     "GovernmentType.name.other": "Andere",
 
+    "HeadType.averageAngular": "Gewöhnlich, kantig",
+    "HeadType.squareJawed": "Quadratischer Kiefer",
+    "HeadType.roundedNarrow": "Abgerundet, schmal",
+    "HeadType.roundedAverage": "Abgerundet, gewöhnlich",
+    "HeadType.softerNarrow": "Weicherer, schmaler Kiefer",
+    "HeadType.pointedDelicate": "Spitzer, zarter Kiefer",
+    "HeadType.rectangular": "Rechteckig mit spitzem Kiefer",
+    "HeadType.elfin": "Elfisch, kleiner Kiefer",
+    "HeadType.pillShaped": "Pillenförmig, Gewichtig",
+    "HeadType.roundedHeavy": "Abgerundet, Gewichtig",
+
     "ModificationType.name.reputation": "Ansehen",
     "ModificationType.name.promotion": "Beförderung",
     "ModificationType.name.milestone": "Meilenstein",
@@ -431,11 +486,71 @@
     "MilestoneType.name.spotlightMilestone": "Rampenlicht-Meilenstein",
     "MilestoneType.name.arcMilestone": "Handlungsbogen-Meilenstein",
 
+    "MissionPod.commandAndControl": "Kommando & Kontrolle",
+    "MissionPod.sensors": "Sensoren",
+    "MissionPod.weapons": "Waffen",
+
+    "MissionProfile.default.strategicAndDiplomatic": "Strategische und diplomatische Operationen",
+    "MissionProfile.default.pathfinderAndReconaissance": "Aufklärungsoperationen",
+    "MissionProfile.default.technicalTestBed": "Technisches Versuchsschiff",
+    "MissionProfile.default.tactical": "Taktische Operationen",
+    "MissionProfile.default.scientificAndSurvey": "Wissenschafts- und Vermessungsoperationen",
+    "MissionProfile.default.crisisAndEmergencyResponse": "Krisen- und Notfallreaktionsoperationen",
+    "MissionProfile.default.multiroleExplorer": "Multifunktions-Erkundungsschiff",
+    "MissionProfile.default.projectEscalante": "Projekt Escalante",
+
     "NpcType.minor.name": "Einfacher NSC",
 
     "NpcType.notable.name": "Bedeutender NSC",
 
     "NpcType.major.name": "Herausragender NSC",
+
+    "Rank.captain.name": "Captain",
+    "Rank.captain.abbrev": "Capt.",
+
+    "Rank.commander.name": "Commander",
+    "Rank.commander.abbrev": "Cmdr.",
+
+    "Rank.lieutenantCommander.name": "Lt. Commander",
+    "Rank.lieutenantCommander.abbrev": "LCdr.",
+
+    "Rank.lieutenant.name": "Lieutenant",
+    "Rank.lieutenant.abbrev": "Lt.",
+
+    "Rank.lieutenantJG.name": "Lieutenant J.G.",
+    "Rank.lieutenantJG.abbrev": "Lt. (J.G.)",
+
+    "Rank.ensign.name": "Fähnrich",
+    "Rank.ensign.abbrev": "Fr.",
+
+    "Rank.none.name": "Ohne",
+
+    "Rank.masterChiefPettyOfficer.name": "Master Chief Petty Officer",
+    "Rank.masterChiefPettyOfficer.abbrev": "Chief",
+
+    "Rank.seniorChiefPettyOfficer.name": "Senior Chief Petty Officer",
+    "Rank.seniorChiefPettyOfficer.abbrev": "Chief",
+
+    "Rank.chiefPettyOfficer.name": "Chief Petty Officer",
+    "Rank.chiefPettyOfficer.abbrev": "Chief",
+
+    "Rank.pettyOfficer1stClass.name": "Petty Officer 1st Class",
+    "Rank.pettyOfficer1stClass.abbrev": "P.O.",
+
+    "Rank.pettyOfficer2ndClass.name": "Petty Officer 2nd Class",
+    "Rank.pettyOfficer2ndClass.abbrev": "P.O.",
+
+    "Rank.pettyOfficer3rdClass.name": "Petty Officer 3rd Class",
+    "Rank.pettyOfficer3rdClass.abbrev": "P.O.",
+
+    "Rank.crewman1stClass.name": "Crewman 1st Class",
+    "Rank.crewman1stClass.abbrev": "Crew.",
+
+    "Rank.crewman2ndClass.name": "Crewman 2nd Class",
+    "Rank.crewman2ndClass.abbrev": "Crew.",
+
+    "Rank.crewman3rdClass.name": "Crewman 3rd Class",
+    "Rank.crewman3rdClass.abbrev": "Crew.",
 
     "ShipBuildType.pod.name": "Kleines Shuttle",
 
@@ -444,6 +559,40 @@
     "ShipBuildType.runabout.name": "Runabout",
 
     "ShipBuildType.starship.name": "Raumschiff",
+
+    "Species.andorian.name": "Andorianer",
+
+    "Species.bajoran.name": "Bajoraner",
+
+    "Species.betazoid.name": "Betazoiden",
+
+    "Species.bolian.name": "Bolianer",
+
+    "Species.deltan.name": "Deltaner",
+
+    "Species.denobulan.name": "Denobulaner",
+
+    "Species.efrosian.name": "Efrosianer",
+
+    "Species.ferengi.name": "Ferengi",
+
+    "Species.human.name": "Menschen",
+
+    "Species.klingon.name": "Klingonen",
+
+    "Species.klingonQuchHa.name": "Klingonen (QuchHa')",
+
+    "Species.orion.name": "Orioner",
+
+    "Species.risian.name": "Risaner",
+
+    "Species.romulan.name": "Romulaner",
+
+    "Species.tellarite.name": "Tellariten",
+
+    "Species.trill.name": "Trill",
+
+    "Species.vulcan.name": "Vulkanier",
 
     "StarSystem.common.coordinates": "Koordinaten",
     "StarSystem.common.innerZone": "Innere Zone",
@@ -455,6 +604,7 @@
     "StarSystem.common.companionStar": "Begleitstern",
 
     "UniformEra.originalSeries": "Originalserie",
+    "UniformEra.monsterMaroon": "Der Zorn des Khan",
     "UniformEra.dominionWar": "Dominionkrieg",
 
     "Value.environment.text": "Diese Überzeugung sollte die Herkunft und die Kultur des Charakters, in der er oder sie aufgewachsen ist, widerspiegeln. Dies ist eine gute Gelegenheit, sich darüber Gedanken zu machen, wie der Charakter seine oder ihre eigene Kultur sieht und wie er oder sie zu den Philosophien und Traditionen der Vorfahren steht.",
