Revise the handling of Rank to better support translation

--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -469,6 +469,7 @@ HairType.mediumLengthFemaleSidePart,Medium Length Side Part,,,
 HairType.mediumMaleCenterPart,Medium Length Center Part,,,
 HairType.mediumLengthFemaleStraight,Medium Length Straight,,,
 HairType.chinLengthCombBack,Chin Length Straight Comb Back,,,
+HairType.shavedSides,Shaved Sides,,,
 HairType.shortTeasedOverEyeStyle,"Short, Teased, Over-Eye",,,
 HairType.feminineDreadStyle,Feminine Dread Style,,,
 HairType.shoulderLengthMostlyStraight,Shoulder Length Mostly Straight,,,
